# orion-agentic-intelligence

./: .gitignore  Dockerfile  Vagrantfile  api.py  constants.py  docker-compose.yml  main.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: security_scan.yml
agent_experiments/agents/: agent.py  analyst.py  example.py  group.py  main.py  reporting.py  triage.py
agent_experiments/agents/evals/: eval_approaches.md
agent_experiments/agents/prompts/: import_prompts.py  state_management.py
agent_experiments/agents/prompts/alert/: alert_0.py  alert_1.py  alert_2.py  definitions.py
agent_experiments/agents/prompts/hypothesis/: alert_0.py  alert_1.py  alert_2.py
agent_experiments/agents/prompts/recon/: alert_1.py
agent_experiments/agents_v0.0.2/: agents.py  example_custom_agents.py  example_run_custom.py  main.py
data/: generate_data.py  preprocess.py
db/vector/: chroma.py
heuristics/: adversarial_ai_attacks.json
ml/: README.md  pyproject.toml
ml/src/1. Clustering/: config.ini  custom_models.py  pipeline.py  syn_data_gen.py  wandb_fns
ml/src/tests/: tests_ml.py
reporting/: generate_report.py  send_notification.py
tests/: test_api.py  test_base.py
tools/: config_tools.yml  nikto_scan.py  nmap_config.py
